# guardduty-to-slack-lambda

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
examples/: cloudtrail_disabled.json  cred_access.json  dns_request.json  k8s_priv_esc.json  password_policy_change.json
scripts/: build.sh  release.sh  run_local.sh
src/: lib.rs  main.rs
